admbsecr 0.1.1
--------------

* Added additional methods:

    * "dist" -- SECR with estimated distance information.

    * "exactdist" -- SECR with exact distances (i.e., MRDS).

* Bug fix to profpars parameter of admbsecr. Profile likelihood now
  works.

admbsecr 0.1.0
--------------

* Initial release of admbsecr.

* Implemented methods are:

    * "simple" -- SECR with no additional information.

    * "toa" -- SECR with time-of-arrival information.

    * "ang" -- SECR with angle information.

    * "ss" -- SECR with signal strength information.

    * "sstoa" -- SECR with both signal strength and time-of-arrival
      information.